--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,6 +3,7 @@ description: A package that allows you to use a native file explorer to pick sin
 homepage: https://github.com/miguelpruivo/plugins_flutter_file_picker
 repository: https://github.com/miguelpruivo/flutter_file_picker
 issue_tracker: https://github.com/miguelpruivo/flutter_file_picker/issues
+publish_to: none
 version: 10.2.0
 
 dependencies:
@@ -11,22 +12,24 @@ dependencies:
   flutter_web_plugins:
     sdk: flutter
 
-  flutter_plugin_android_lifecycle: ^2.0.22
-  plugin_platform_interface: ^2.1.8
-  ffi: ^2.1.3
-  path: ^1.9.0
-  win32: ^5.9.0
+  flutter_plugin_android_lifecycle:
+    git: https://github.com/kumsumit/flutter_plugin_android_lifecycle.git
+  plugin_platform_interface:
+    git: https://github.com/kumsumit/plugin_platform_interface.git
+  ffi: ^2.1.4
+  path: ^1.9.1
+  win32: ^5.14.0
   cross_file: ^0.3.4+2
-  web: ^1.1.0
+  web: ^1.1.1
 
 dev_dependencies:
-  lints: ^5.1.1
+  lints: ^6.0.0
   flutter_test:
     sdk: flutter
 
 environment:
-  sdk: ">=3.4.0 <4.0.0"
-  flutter: ">=3.22.0"
+  sdk: ">=3.8.1 <4.0.0"
+  flutter: ">=3.32.0"
 
 flutter:
   plugin:
