--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,14 +16,14 @@ dependencies:
     git: https://github.com/kumsumit/flutter_plugin_android_lifecycle.git
   plugin_platform_interface:
     git: https://github.com/kumsumit/plugin_platform_interface.git
-  ffi: ^2.1.4
+  ffi: ^2.2.0
   path: ^1.9.1
-  win32: ^5.14.0
-  cross_file: ^0.3.4+2
+  win32: ^5.15.0
+  cross_file: ^0.3.5
   web: ^1.1.1
 
 dev_dependencies:
-  lints: ^6.0.0
+  lints: ^6.1.0
   flutter_test:
     sdk: flutter
 
