--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,16 +2,14 @@ group 'com.mr.flutter.plugin.filepicker'
 version '1.0-SNAPSHOT'
 
 buildscript {
-    ext {
-        kotlin_version = '2.2.0'
-    }
+    ext.kotlin_version = "2.3.10"
     repositories {
         google()
         mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.11.1'
+        classpath 'com.android.tools.build:gradle:8.13.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -23,14 +21,15 @@ rootProject.allprojects {
     }
 }
 
-apply plugin: 'com.android.library'
-apply plugin: 'org.jetbrains.kotlin.android'
+apply plugin: "com.android.library"
+apply plugin: "kotlin-android"
 
 android {
-    compileSdk 36
+    namespace 'com.mr.flutter.plugin.filepicker' 
+    compileSdk = 36
 
     defaultConfig {
-        minSdk 21
+        minSdk 24
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'proguard-rules.pro'
     }
@@ -39,19 +38,15 @@ android {
     }
     
     dependencies {
-        implementation 'androidx.core:core:1.16.0'
+        implementation 'androidx.core:core:1.17.0'
         implementation 'androidx.annotation:annotation:1.9.1'
-        implementation "androidx.lifecycle:lifecycle-runtime:2.9.2"
-        implementation "org.apache.tika:tika-core:3.2.1"
+        implementation "androidx.lifecycle:lifecycle-runtime:2.10.0"
+        implementation "org.apache.tika:tika-core:3.2.3"
     }
     kotlinOptions {
-        jvmTarget = '24'
-    }
-
-    if (project.android.hasProperty("namespace")) {
-        namespace 'com.mr.flutter.plugin.filepicker' 
+        jvmTarget = '21'
     }
 }
 dependencies {
-    implementation 'androidx.core:core-ktx:1.16.0'
+    implementation 'androidx.core:core-ktx:1.17.0'
 }
